--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,21 @@
 .App {
-  text-align: center;
-  color: #fff;
+  color: var(--white-color);
+  min-height: 100vh;
+  background-color: #282c34;
+  background-image: url(./img/3393776.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
   padding-top: 50px;
+  padding-bottom: 50px;
+}
+
+.main__title {
+  margin-bottom: 20px;
+  font-size: 50px;
+}
+
+.section__title {
+  margin-bottom: 20px;
+  font-size: 40px;
 }
